// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Graphviz component render dot element 1`] = `
<div>
  <div>
    {"dot":"digraph {\\n  \\"n1\\";\\n  \\"n2\\";\\n  \\"n3\\";\\n  \\"n1\\" -&gt; \\"n2\\" -&gt; \\"n3\\";\\n  \\"n1\\" -&gt; \\"n3\\";\\n}","format":"svg","ext":{"images":[],"files":[]}}
  </div>
</div>
`;

exports[`Graphviz component render dot string 1`] = `
<div>
  <div>
    {"dot":"digraph { a -&gt; b -&gt; c; a-&gt;c; }","format":"svg","ext":{"images":[],"files":[]}}
  </div>
</div>
`;
